--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,29 +4,12 @@ description: "Master Elf Feng Shui"
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: ^3.7.0
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
@@ -38,6 +21,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  permission_handler: ^11.4.0
+  webview_flutter: ^4.4.2 # For web browser functionality
+  lottie: ^2.3.1 # For Lottie animations
+  flutter_blurhash: ^0.7.0 # For blur effect (optional, if needed)
+  audioplayers: ^6.4.0 # Use the latest version
+
 
 dev_dependencies:
   flutter_test:
@@ -48,9 +37,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  path_provider: ^2.1.1 # For saving files to the device
+  share_plus: ^7.0.0   # For sharing the screenshot
   flutter_lints: ^5.0.0
   font_awesome_flutter: ^10.1.0 # Add this line
   cupertino_calendar_picker: ^2.2.2
+  dart_iztro: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,7 +59,9 @@ flutter:
   assets:
      - assets/images/lopanhd.png
      - assets/images/bg.jpg
+     - assets/images/ybg.jpg
      - assets/videos/splash.mp4
+     - assets/videos/pray.mp4
      - assets/icons/bazi.png
      - assets/icons/date.png
      - assets/icons/lopan.png
@@ -75,7 +69,12 @@ flutter:
      - assets/icons/more.png
      - assets/icons/pray.png
      - assets/icons/talisman.png
-
+     - assets/images/logo.png
+     - assets/images/intepretation.png
+     - assets/jsons/loading_animation.json
+     - assets/jsons/godofwealth.json
+     - assets/jsons/ratofwealth.json
+     - assets/audios/praying.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
