--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   intl: ^0.19.0  # For date formatting
   flutter_compass: ^0.8.1
   video_player: ^2.7.0
-  lunar: ^1.3.0 # Add this package
+  lunar: ^1.7.4 # Add this package
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -26,7 +26,10 @@ dependencies:
   lottie: ^2.3.1 # For Lottie animations
   flutter_blurhash: ^0.7.0 # For blur effect (optional, if needed)
   audioplayers: ^6.4.0 # Use the latest version
-
+  path_provider: ^2.1.1 # For saving files to the device
+  share_plus: ^7.0.0   # For sharing the screenshot
+  url_launcher: ^6.1.5
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -37,12 +40,16 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  path_provider: ^2.1.1 # For saving files to the device
-  share_plus: ^7.0.0   # For sharing the screenshot
   flutter_lints: ^5.0.0
   font_awesome_flutter: ^10.1.0 # Add this line
   cupertino_calendar_picker: ^2.2.2
   dart_iztro: ^2.4.6
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/icons/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,8 +65,24 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/lopanhd.png
+     - assets/images/lopanhd2.png
      - assets/images/bg.jpg
      - assets/images/ybg.jpg
+     - assets/images/row1a.png
+     - assets/images/row1b.png
+     - assets/images/row1c.png
+     - assets/images/row2a.png
+     - assets/images/row2b.png
+     - assets/images/row2c.png
+     - assets/images/row3a.png
+     - assets/images/row3b.png
+     - assets/images/row3c.png
+     - assets/images/profile.png
+     - assets/images/splash.jpg
+     - assets/images/cover_image.jpg
+     - assets/images/master_elf.jpg
+     - assets/icons/telegram.png
+     - assets/icons/tiktok.png
      - assets/videos/splash.mp4
      - assets/videos/pray.mp4
      - assets/icons/bazi.png
@@ -71,9 +94,22 @@ flutter:
      - assets/icons/talisman.png
      - assets/images/logo.png
      - assets/images/intepretation.png
+     - assets/images/star1.png
+     - assets/images/star2.png
+     - assets/images/star3.png
+     - assets/images/star4.png
+     - assets/images/star5.png
+     - assets/images/star6.png
+     - assets/images/star7.png
+     - assets/images/star8.png
+     - assets/images/star9.png
      - assets/jsons/loading_animation.json
      - assets/jsons/godofwealth.json
-     - assets/jsons/ratofwealth.json
+     - assets/jsons/purplestar.json
+     - assets/jsons/redpocket.json
+     - assets/jsons/thunder.json
+     - assets/jsons/thunder2.json
+     - assets/jsons/wave.json
      - assets/audios/praying.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
