--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  permission_handler: ^11.4.0
+  permission_handler: ^12.0.0+1
   webview_flutter: ^4.4.2 # For web browser functionality
-  lottie: ^2.3.1 # For Lottie animations
-  flutter_blurhash: ^0.7.0 # For blur effect (optional, if needed)
+  lottie: ^3.3.1 # For Lottie animations
+  flutter_blurhash: ^0.8.2 # For blur effect (optional, if needed)
   path_provider: ^2.1.1 # For saving files to the device
-  share_plus: ^7.0.0   # For sharing the screenshot
+  share_plus: ^10.1.4   # For sharing the screenshot
   url_launcher: ^6.1.5
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
