--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_compass: ^0.8.1
   video_player: ^2.7.0
   lunar: ^1.7.4 # Add this package
+  sensors_plus: ^6.1.1
+  shared_preferences: ^2.2.2
+  elegant_notification: ^2.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -24,9 +27,9 @@ dependencies:
   permission_handler: ^12.0.0+1
   webview_flutter: ^4.4.2 # For web browser functionality
   lottie: ^3.3.1 # For Lottie animations
-  flutter_blurhash: ^0.8.2 # For blur effect (optional, if needed)
+  flutter_blurhash: ^0.9.1 # For blur effect (optional, if needed)
   path_provider: ^2.1.1 # For saving files to the device
-  share_plus: ^10.1.4   # For sharing the screenshot
+  share_plus: ^11.0.0   # For sharing the screenshot
   url_launcher: ^6.1.5
   connectivity_plus: ^6.1.3
 
@@ -92,6 +95,8 @@ flutter:
      - assets/icons/pray.png
      - assets/icons/talisman.png
      - assets/images/logo.png
+     - assets/images/kaucim.png
+     - assets/images/kaucim_stick.png
      - assets/images/intepretation.png
      - assets/images/star1.png
      - assets/images/star2.png
@@ -109,6 +114,7 @@ flutter:
      - assets/jsons/thunder.json
      - assets/jsons/thunder2.json
      - assets/jsons/wave.json
+     - assets/jsons/lightray.json
      - assets/audios/praying.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
