--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,10 @@ flutter:
   assets:
      - assets/images/lopanhd.png
      - assets/images/lopanhd2.png
+
      - assets/images/bg.jpg
      - assets/images/ybg.jpg
+
      - assets/images/row1a.png
      - assets/images/row1b.png
      - assets/images/row1c.png
@@ -79,12 +81,11 @@ flutter:
      - assets/images/row3a.png
      - assets/images/row3b.png
      - assets/images/row3c.png
+
      - assets/images/profile.png
      - assets/images/splash.jpg
      - assets/images/cover_image.jpg
      - assets/images/master_elf.jpg
-     - assets/icons/telegram.png
-     - assets/icons/tiktok.png
      - assets/videos/splash.mp4
      - assets/videos/pray.mp4
      - assets/icons/bazi.png
@@ -94,8 +95,14 @@ flutter:
      - assets/icons/more.png
      - assets/icons/pray.png
      - assets/icons/talisman.png
+
      - assets/icons/menu.png
+
+     - assets/icons/facebook.png
+     - assets/icons/telegram.png
+     - assets/icons/whatapp.png
      - assets/images/logo.png
+
      - assets/images/kaucim.png
      - assets/images/kaucim_stick.png
      - assets/images/intepretation.png
@@ -104,6 +111,7 @@ flutter:
      - assets/images/standing.png
      - assets/images/moon_blocks.png
      - assets/images/profileicon.png
+
      - assets/images/star1.png
      - assets/images/star2.png
      - assets/images/star3.png
